# recipes-problem-cbr

./: .gitignore  main.py  mypy.ini  pyproject.toml
constant/: result_limit.py
evaluation/: evaluate_with_leave_one_out.py
helpers/: clean_data.py
sim_functions/: custom_ingrecient_similarity.py  custom_ingredient_similarity.py  tfidf_similarity.py
