[project]
name = "recipes-problem-cbr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["cbrkit>=0.28.2", "pandas>=2.3.2"]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.0.250703",
    "watchfiles>=1.1.0",
]

[tool.pyright]
reportMissingTypeStubs = false
